Fix alignment of navbar

--- a/main.css
+++ b/main.css
@@ -6,6 +6,9 @@ h1, h2, h3, h4, h5, h6, p, small {
   width: 100%;
 }
 
+.delta {
+  width: 1170px;
+}
 
 .header {
   padding-top: 10px;
